--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
             <p>
                 <label for='ZipCode'>ZipCode:</label>
-                <input type="text" id="ZipCode" name="ZipCode" />
+                <input type="text" id="ZipCode" name="ZipCode" minlength="5"/>
             </p>
 
             <div class="warning" id="fname"></div>
