--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
             <p>
-                <label for='State'>State:</label>
+                <label id='State'>State:</label>
                 <select name="state">
                 <option selected>Select</option>
                  <option value="Alabama">Alabama</option>
@@ -108,7 +108,7 @@
             </p>
 
             <p>
-                <label for='Country'>Country:</label>
+                <label id='Country'>Country:</label>
                 <select id="country" name="country">
                     <option value="Afganistan">Afghanistan</option>
                     <option value="Albania">Albania</option>
